fixing function, jwt and implement crud users
