# routes/routes.go
@@ -2,18 +2,19 @@ package routes
 
 import (
 	"golang-mongodb/handlers"
+	"golang-mongodb/utils"
 
 	"github.com/gin-gonic/gin"
 )
 
-func RoutesGo(router *gin.Engine) {
+func SetupRoutes(router *gin.Engine, jwtSecret []byte) {
 	auth := router.Group("/auth")
 	{
 		auth.POST("/register", handlers.Register)
 		auth.POST("/login", handlers.Login)
 	}
 
-	users := router.Group("/users")
+	users := router.Group("/users", utils.AuthMiddleware(jwtSecret))
 	{
 		users.GET("/", handlers.GetAllUsers)
 		users.PUT("/:id", handlers.UpdateUser)
